添加g:ctrlsf_ignore_dir变量&修改tex template fileformat

--- a/ftplugin/tex/template/Template.tex
+++ b/ftplugin/tex/template/Template.tex
@@ -9,6 +9,7 @@
 \usepackage{graphicx,wrapfig,multirow,diagbox,caption, subcaption,verbatim}
 \usepackage{caption,algorithm,algpseudocode}
 \usepackage{url,natbib}
+\usepackage{bm}
 \bibliographystyle{abbrvnat}
 \setcitestyle{open={(},authoryear,close={)}}
 \renewcommand{\algorithmicrequire}{\textbf{输入}}
