--- a/ftplugin/tex/template/Template.tex
+++ b/ftplugin/tex/template/Template.tex
@@ -9,13 +9,14 @@
 \usepackage{graphicx,wrapfig,multirow,diagbox,caption,subcaption}
 \usepackage{verbatim,algpseudocode}
 \usepackage[boxruled]{algorithm2e}
-\usepackage{url,natbib,bm}
+\usepackage{url,natbib,bm,titling}
 \bibliographystyle{abbrvnat}
 \setcitestyle{open={(},authoryear,close={)}}
 \listfiles
 \input{initialset.tex}
 \linespread{1.5}
 \author{龙子超}
+%\setlength{\droptitle}{-10em}
 \title{{\heiti {\zihao{3} }}}
 \date{}
 \begin{document}
